--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/*Anotações importantes*/
+/*CLASSE - substituir o p pelo .texto*/
+/* ID - substituir o h1 por #título/ 
+
+
+
 p{
     color: red ;
     text-align:center; 
